plyr workaround for clicking twice to start video on iOS issue

--- a/frontend/styles/components/homepage/home-video.scss
+++ b/frontend/styles/components/homepage/home-video.scss
@@ -2,13 +2,15 @@
 
 .plyr {
   visibility: hidden;
-  height: 0;
-  width: 0;
+  height: 1px;
+  width: 1px;
+  margin-left: -1px; // otherwise video is not playing after first click on the button (only iOS Safari ofc) dunno why???
   min-width: 0;
 
   &.plyr--playing.plyr--fullscreen-enabled {
     visibility: visible;
     height: 100%;
     width: 100%;
+    margin-left: 0;
   }
 }
